fix .review-details alignment

--- a/app/assets/stylesheets/blocks/b-review.sass
+++ b/app/assets/stylesheets/blocks/b-review.sass
@@ -50,7 +50,6 @@
     line-height: 1
 
     +gte_ipad
-      align-items: center
       display: flex
       flex-grow: 1
       flex-wrap: wrap
